# Grid-Iron_Mind

./: .buildpacks  .env.example  .gitignore  API_DATA_SYNC.md  API_DOCUMENTATION.md  AUTO-FETCH-IMPLEMENTATION.md  CLAUDE.md  CODEBASE_ANALYSIS_REPORT.md  COMPREHENSIVE_API_SUMMARY.md  Cargo.toml  DATABASE_PERFORMANCE.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-SUMMARY.md  DESIGN_SYSTEM.md  DIAGNOSTIC-QUICK-START.md  DIAGNOSTICS.md  FINAL-DEPLOYMENT-STATUS.md  HEROKU_DEPLOY.md  IMPORT-HISTORICAL-DATA.md  INSTRUCTIONS.md  LIVE_SYNC_GUIDE.md  LOGGING_GUIDE.md  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_PROGRESS.md  PLAYER-DIAGNOSTICS-SUMMARY.md  Procfile  README-SYNC.md  README.md  ROTATE_CREDENTIALS_GUIDE.md  RustConfig  SECURITY_REMEDIATION.md  SETUP-COMPLETE.md  SQL_SECURITY.md  TESTING_SUMMARY.md  WORKER-DEPLOYMENT.md  YAHOO_INTEGRATION_GUIDE.md  agents.md  casestudy.md  (+5 more)
.serena/: project.yml
api/: players.go  teams.go
dashboard/: README.md  analytics.html  api-docs.html  api-v2-docs.html  app.js  docs.html  index-new.html  index-old-dashboard.html  index.html  index.html.bak  search.js  skeu-demo.html  style-guide.html  styles.css  ui-system.css  ui-system.html  yahoo-test.html
data_exploration/: DATA_ANALYSIS.md  (+9 more)
nfl-data-pipeline/: .env.example  .rustfmt.toml  Cargo.toml  HEROKU_DEPLOYMENT.md  Makefile  QUICKSTART.md  README.md  WORKER_STRATEGY.md  run-worker-with-init.sh  run-worker.sh
nfl-data-pipeline/scripts/: crontab-2025.txt
nfl-data-pipeline/src/: config.rs  database.rs  downloader.rs  main.rs  parser.rs  sync.rs  transformer.rs  validator.rs
(+144 files in other folders)
