[package]
name = "nfl-data-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for downloading data
reqwest = { version = "0.11", features = ["blocking", "json"] }

# CSV parsing
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database connectivity (PostgreSQL)
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4"] }
postgres-native-tls = "0.5"
native-tls = "0.2"

# UUID support
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenv = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Progress bars
indicatif = "0.17"

# Parallel processing
rayon = "1.8"

# Lazy static initialization
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
